--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/carloshernandezr/spy-team.git"
   },
   "keywords": [
-    "Generator",
-    "profile"
+    "Team"
   ],
   "author": "Carlos Hernandez",
   "license": "MIT",
@@ -25,6 +24,7 @@
   },
   "homepage": "https://github.com/carloshernandezr/spy-team#readme",
   "dependencies": {
-    "inquirer": "^7.0.4"
+    "inquirer": "^7.0.4",
+    "jest": "^25.1.0"
   }
 }
